--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/SuperHeroSightingsDB?serverTimezone=America/Chicago&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=apprentice
-spring.datasource.password=TSGr00t!
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PW}
