--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/TestSuperHeroSightingsDB?serverTimezone=America/Chicago&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=apprentice
-spring.datasource.password=TSGr00t!
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PW}
+
+spring.datasource.initialSize=5
+spring.datasource.maxTotal=10
