--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,12 @@
         </dependency>
         <!-- for testing! -->
     </dependencies>
-
+          <build>  
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>  
 </project>
