--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PW}
-
-spring.datasource.initialSize=5
-spring.datasource.maxTotal=10
+spring.datasource.url=jdbc:mysql://localhost:3306/SuperHeroSightingsDB?serverTimezone=America/Chicago&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=TSGr00t!
